src/objects/GDPR_Country_Email_Opt_In_Opt_Out__mdt/GDPR_Country_Email_Opt_In_Opt_Out__mdt.object-meta.xml
<CustomObject>
    <label>GDPR Country Email Opt-In Opt-Out</label>
    <pluralLabel>GDPR Country Email Opt-In Opt-Outs</pluralLabel>
</CustomObject>