src/objects/GDPR_Country_Email_Opt_In_Opt_Out__mdt/fields/CONTACT_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>CONTACT_CATEGORY__c</fullName>
    <label>CONTACT CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PARTNER</fullName>
                <default>true</default>
                <label>PARTNER</label>
            </value>
            <value>
                <fullName>CUSTOMER</fullName>
            </value>
            <value>
                <fullName>PARTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>