src/objects/GDPR_Country_Email_Opt_In_Opt_Out__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUSTRIA</fullName>
                <default>true</default>
                <label>AUSTRIA</label>
            </value>
            <value>
                <fullName>BELGIUM</fullName>
            </value>
            <value>
                <fullName>BULGARIA</fullName>
            </value>
            <value>
                <fullName>CROATIA</fullName>
            </value>
            <value>
                <fullName>CYPRUS</fullName>
            </value>
            <value>
                <fullName>CZECHIA</fullName>
            </value>
            <value>
                <fullName>DENMARK</fullName>
            </value>
            <value>
                <fullName>ESTONIA</fullName>
            </value>
            <value>
                <fullName>FINLAND</fullName>
            </value>
            <value>
                <fullName>FRANCE</fullName>
            </value>
            <value>
                <fullName>GERMANY</fullName>
            </value>
            <value>
                <fullName>GREECE</fullName>
            </value>
            <value>
                <fullName>HUNGARY</fullName>
            </value>
            <value>
                <fullName>IRELAND</fullName>
            </value>
            <value>
                <fullName>ITALY</fullName>
            </value>
            <value>
                <fullName>LATVIA</fullName>
            </value>
            <value>
                <fullName>LITHUANIA</fullName>
            </value>
            <value>
                <fullName>LUXEMBOURG</fullName>
            </value>
            <value>
                <fullName>MALTA</fullName>
            </value>
            <value>
                <fullName>NETHERLANDS</fullName>
            </value>
            <value>
                <fullName>POLAND</fullName>
            </value>
            <value>
                <fullName>PORTUGAL</fullName>
            </value>
            <value>
                <fullName>ROMANIA</fullName>
            </value>
            <value>
                <fullName>SLOVAKIA</fullName>
            </value>
            <value>
                <fullName>SLOVENIA</fullName>
            </value>
            <value>
                <fullName>SPAIN</fullName>
            </value>
            <value>
                <fullName>SWEDEN</fullName>
            </value>
            <value>
                <fullName>UNITED KINGDOM</fullName>
            </value>
            <value>
                <fullName>UNITED STATES</fullName>
            </value>
            <value>
                <fullName>EUROPEAN UNION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>