src/objects/GDPR_Country_Email_Opt_In_Opt_Out__mdt/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPT OUT</fullName>
                <default>true</default>
                <label>OPT OUT</label>
            </value>
            <value>
                <fullName>OPT IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>